# huyorg

./: .gitignore  CMakeLists.txt  README.md  circle.yml  commit.sh  format.sh
ansible/: burn.sh  kill_burn.sh  shutdown_all.sh  site.retry  site.yml
ansible/roles/common/files/: burn.sh  distcc_hosts  docker  temp.sh  vimrc
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: distcc_default
ansible/roles/head/tasks/: main.yml
ansible/tools/: burn.sh
client/: CMakeLists.txt  main.cpp  main.h  pod.json
docker_images/alpine_sleep/: Dockerfile
lib/client/: CMakeLists.txt  upload.cpp  upload.h
lib/confreader/: confreader.cpp  confreader.h
lib/container/: CMakeLists.txt  container.cpp  container.h
lib/dockerclient/: CMakeLists.txt  dockerclient.cpp  dockerclient.h
lib/host_port_parser/: host_port_parser.cpp  host_port_parser.h
lib/httpclient/: CMakeLists.txt  dockerclient.h  httpclient.cpp  httpclient.h
lib/json/: CMakeLists.txt  json.cpp  json.h
lib/logging/: logging.cpp  logging.h
lib/optparse/: optparse.cpp  optparse.h
lib/read_file/: read_file.cpp  read_file.h
lib/slave_client/: CMakeLists.txt  slave_client.cpp  slave_client.h
lib/storage/: storage.cpp  storage.h
lib/tcpclient/: CMakeLists.txt  tcpclient.cpp  tcpclient.h
lib/tcpserver/: CMakeLists.txt  tcpserver.cpp  tcpserver.h
master/: CMakeLists.txt  main.cpp  main.h  master.conf  master.cpp  master.h  scheduler.h  tags  watcher.cpp  watcher.h
slave/: CMakeLists.txt  main.cpp  main.h
test/: CMakeLists.txt  add_pod.json  add_slave.json  confreader_test.cpp  container_test.cpp.cpp  docker_test.cpp  http_test.cpp  json_test.cpp  master.conf  pod.json  slave.conf  storage_test.cpp  tcp_test.cpp  test.sh
test/docker_images/alpine_sleep/: Dockerfile
test/test_data/: confreader_test
