cmake_minimum_required(VERSION 3.2)
set(BOOST_ROOT "/usr/local/boost")
set(CMAKE_LIBRARY_PATH "/usr/local/boost/lib")
set(CMAKE_INCLUDE_PATH "/usr/local/boost/include/boost")
find_package(Boost COMPONENTS system-mt thread-mt program_options REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_subdirectory(client)
add_subdirectory(slave)
add_subdirectory(master)
