cmake_minimum_required(VERSION 2.8)
set(BOOST_ROOT "/usr/local/Cellar/boost160/1.60.0")
set(BOOST_INCLUDE_DIRS "${BOOST_ROOT}/include")
set(BOOST_LIBRARY_DIRS "${BOOST_ROOT}/lib")
include_directories(${BOOST_INCLUDE_DIRS})
set(CMAKE_BUILD_TYPE Debug)
set(Boost_NO_BOOST_CMAKE TRUE)
find_package(Boost COMPONENTS system thread program_options REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -w")
add_subdirectory(client)
add_subdirectory(slave)
add_subdirectory(master)
enable_testing()
add_subdirectory(test)
