project(client CXX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(OPTPARSE ../lib/optparse/optparse.cpp)
set(TCPCLIENT ../lib/tcpclient/tcpclient.cpp)
set(UPLOAD ../lib/client/upload.cpp)
add_library(optparse ${OPTPARSE})
add_library(tcpclient ${TCPCLIENT})
add_library(upload ${UPLOAD})
set(SOURCE_FILES main.cpp main.h)
add_executable(client ${SOURCE_FILES})
target_link_libraries(client LINK_PUBLIC optparse tcpclient upload ${Boost_LIBRARIES})
