project(client CXX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(OPTPARSE ../lib/optparse/optparse.cpp)
#set(TCPCLIENT ../lib/tcpclient/tcpclient.cpp)
set(READ_FILE ../lib/read_file/read_file.cpp)
add_library(optparse ${OPTPARSE})
#add_library(tcpclient ${TCPCLIENT})
add_library(read_file ${READ_FILE})
set(SOURCEFILES main.cpp main.h)
add_executable(client ${SOURCEFILES})
target_link_libraries(client optparse tcpclient read_file ${Boost_LIBRARIES})
