project(client CXX)
set(BOOST_ROOT "/usr/local/boost")
set(CMAKE_LIBRARY_PATH "/usr/local/boost/lib")
set(CMAKE_INCLUDE_PATH "/usr/local/boost/include/boost")
find_package(Boost COMPONENTS system-mt thread-mt REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES main.cpp main.h)
set(LOGGING ../lib/logging/logging.cpp)
set(TCPSERVER ../lib/tcpserver/tcpserver.cpp)
set(CONFREADER ../lib/confreader/confreader.cpp)
add_library(logging ${LOGGING})
add_library(tcpserver ${TCPSERVER})
add_library(confreader ${CONFREADER})
add_executable(master ${SOURCE_FILES})
target_link_libraries(master LINK_PUBLIC tcpserver logging confreader ${Boost_LIBRARIES})


