project(master CXX)
set(SOURCEFILES main.cpp main.h)
set(LOGGING ../lib/logging/logging.cpp)
set(TCPSERVER ../lib/tcpserver/tcpserver.cpp)
set(CONFREADER ../lib/confreader/confreader.cpp)
set(HTTPCLIENT ../lib/httpclient/httpclient.cpp)
set(TCPCLIENT ../lib/tcpclient/tcpclient.cpp)
set(JSON ../lib/json/json.cpp)
set(MASTER_LIB master.cpp)
set(WATCHER_LIB watcher.cpp)
set(STORAGE ../lib/storage/storage.cpp)
set(SLAVECLIENT ../lib/slave_client/slave_client.cpp)
add_library(logging STATIC ${LOGGING})
add_library(tcpserver STATIC ${TCPSERVER})
add_library(confreader STATIC ${CONFREADER})
add_library(json STATIC ${JSON})
add_library(master_lib ${MASTER_LIB})
add_library(storage STATIC ${STORAGE})
add_library(watcher STATIC ${WATCHER_LIB})
add_library(httpclient STATIC ${HTTPCLIENT})
add_library(tcpclient STATIC ${TCPCLIENT})
add_library(slaveclient STATIC ${SLAVECLIENT})
add_executable(master ${SOURCEFILES})
target_link_libraries(slaveclient PUBLIC tcpclient)
target_link_libraries(master_lib PUBLIC tcpserver json slaveclient)
target_link_libraries(master PUBLIC tcpserver logging confreader json master_lib storage watcher tcpclient httpclient slaveclient ${Boost_LIBRARIES})
#set_target_properties(master PROPERTIES LINK_SEARCH_END_STATIC 1)
