project(test CXX)
add_subdirectory(/usr/src/gtest ${CMAKE_CURRENT_BINARY_DIR}/libgtest )
add_executable(json_test json_test.cpp)
add_executable(confreader_test confreader_test.cpp)
target_link_libraries(json_test gtest gtest_main json)
target_link_libraries(confreader_test gtest gtest_main confreader)
add_test(NAME json_test COMMAND json_test)
add_test(NAME confreader_test COMMAND confreader_test)
